2011-02-16 : releasing 2.5.5
2011-02-16 : added process id to temporary file names so that code can be run via mpi
2011-02-02 : releasing 2.5.4
2011-02-02 : fixed a memory issue in the Python API for get_variable_attribute and has_variable_attribute
2011-01-31 : releasing 2.5.3
2011-01-25 : path produced w/o '/' or weird characters
2011-01-25 : cannot set global attribute if it is an attribute that can be set via cmor_dataset
2011-01-25 : cannot set var attribute after var has been created into nc file
2011-01-25 : cannot set var attribute if it is settable via cmor_variable
2011-01-25 : can handle "character type" singleton dimensions
2011-01-25 : does not stores units on character typevariables
2011-01-24 : cmor_axes, interval check cleanup errormessage, now specifies which units the diff calaculated is in.
2011-01-24 : updated cmor_set_variable_attrubtes to go thru an 'internal' one
2010-12-17 : when passing character type axes, checking output is suppposed to be character
2010-12-17 : fixed bug found by Jamie that didn't pass the correct args in get_var_Attribute
2010-12-16 : added two python test for var with string dimensions
2010-12-06 : turned off udunits2 warnings when reading database in
2010-11-18 : added a '/' after output path for tmp file testing
2010-11-12 : Updated documentation
2010-11-11 : updated pywrapper from Jamie
2010-11-11 : new examples into Makefile for Python
2010-11-11 : added a flag that says need to cal cmor_grid on some axis (site and location)
2010-11-05 : new doc updated by Karl.
2010-11-05 : removed option, for now, to create non-standard calendars because the dates in filenames would be wrong.
2010-11-05 : file_name=True ignored in python if no var_id is passed to it as well.
2010-11-05 : added realm to gridspec file names
2010-11-05 : reverted ext_cell_measures to cell_measures
2010-10-27 : edited the test for permission on output directory, used to fail if you had group write privileges but that wasnt your main group